fix: delete parameter on invoke method from GetAllByUserTransactionsController and get it implicitly by jwt token.
