# routes/api.php
@@ -47,7 +47,7 @@ Route::middleware('auth:api')->group(function(){
     Route::get('v1/products', App\Http\Controllers\API\Products\GetProductsController::class)->name('api.products');
     Route::post('v1/transaction/create', App\Http\Controllers\API\Transactions\CreateTransactionsController::class)->name('transactions.create');
     Route::get('v1/transaction/detail/{id}', App\Http\Controllers\API\Transactions\DetailTransactionsController::class)->name('transactions.detail');
-    Route::get('v1/transactions/user/{id}', App\Http\Controllers\API\Transactions\GetAllByUserTransactionsController::class)->name('transactions.show-all-by-user');
+    Route::get('v1/transactions/user', App\Http\Controllers\API\Transactions\GetAllByUserTransactionsController::class)->name('transactions.show-all-by-user');
 
 });
 
